# codesm

./: .dockerignore  .gitignore  ARCHITECTURE.md  DESIGN_NOTES.md  Dockerfile  FAILURE_MODES.md  README.md  main.py  pyproject.toml  test_subagent.py
.github/workflows/: publish.yml
benchmarks/: README.md  add-docstring.yaml  adversarial-secret.yaml  ambiguous-requirements.yaml  easy-add-function.yaml  fix-bug-with-tests.yaml  long-context.yaml  refactor-rename.yaml
codesm/: atomic_edit.py  cli.py  cli_mcp.py  cli_permissions.py  diff_preview.py  file_watcher.py  formatter.py  undo_history.py
codesm/agent/: __init__.py  agent.py  event_log.py  loop.py  optimizer.py  orchestrator.py  prompt.py  router.py  subagent.py
codesm/audit/: __init__.py  audit.py
codesm/auth/: credentials.py
codesm/config/: schema.py  validator.py
codesm/eval/: __init__.py  compare.py  metrics.py  runner.py  task.py
codesm/lsp/: client.py
codesm/permission/: __init__.py  permission.py  store.py
codesm/provider/: base.py  ollama.py  openai.py  openrouter.py  router.py
codesm/review/: __init__.py  refactor.py  reviewer.py
codesm/server/: server.py  trace_viewer.py
codesm/session/: __init__.py  context.py  session.py  summarize.py  title.py  todo.py  topics.py
codesm/skills/: __init__.py  install.py  manager.py
codesm/tool/: bash.py  diagnostics.py  edit.py  finder.py  finder.txt  git.py  git.txt  glob.py  lookat.py  mark_uncertain.py  mermaid.py  multiedit.py  multiedit.txt  multifile_edit.py  multifile_edit.txt  oracle.py  oracle.txt  orchestrate.py  patch.py  patch.txt  read.py  redo.py  refactor.py  refactor.txt  registry.py  skill.py  task.py  task.txt  todo.py  todo.txt  undo.py  webfetch.py  websearch.py  write.py
codesm/tui/: __init__.py  app.py  autocomplete.py  chat.py  clipboard.py  command_palette.py  modals.py  session_modal.py  styles.tcss  themes.py  tools.py
docs/: astro.config.mjs  pnpm-lock.yaml
docs/src/styles/: custom.css
prompts/: system.txt
tests/: conftest.py  test_compact.py  test_refactor.py  test_skills.py
