[project]
name = "codesm"
version = "0.1.0"
description = "An AI coding agent for the terminal. Built to study how coding models fail."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Aditya P S", email = "aditya.ps.05@gmail.com" },
]
keywords = [
    "ai",
    "agent",
    "coding",
    "llm",
    "cli",
    "react",
    "evaluation",
    "benchmark",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.54.0",
    "ollama>=0.4.0",
    "textual>=0.90.0",
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "thefuzz>=0.22.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
# Semantic code search via local sentence embeddings. Not installed by
# default because it pulls pytorch (~1.5 GB). Enable with:
#     pip install "codesm[search]"
search = [
    "sentence-transformers>=2.2.0",
]
# HTTP API server (codesm serve). Installs FastAPI and Uvicorn on demand.
#     pip install "codesm[server]"
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
# PDF extraction for the `look_at` tool. Installs on demand.
#     pip install "codesm[pdf]"
pdf = [
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/Aditya-PS-05/codesm"
Repository = "https://github.com/Aditya-PS-05/codesm"
Issues = "https://github.com/Aditya-PS-05/codesm/issues"

[project.scripts]
codesm = "codesm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codesm"]

[tool.hatch.build.targets.sdist]
include = [
    "codesm/",
    "benchmarks/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
